--- a/src/main/webapp/template/query.html
+++ b/src/main/webapp/template/query.html
@@ -21,6 +21,37 @@
 					</div>
 				</div>
 
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Result alias</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" ng-model="query.resultAlias" ng-change="unsaved()">
+					</div>
+				</div>
+
+				<hr>
+
+				<div ng-repeat="(i, attr) in query.typeNames track by $index" class="form-group">
+					<label class="col-sm-2 control-label">Type name {{ $index + 1 }}</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="unsaved()">
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-danger" ng-click="removeTypeNames($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+					</div>
+				</div>
+
+				<div ng-show="server.blankTypeNames[queryIndex]" class="form-group">
+					<label class="col-sm-2 control-label">Type name {{ query.typeNames.length + 1 }}</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control" ng-model="server.blankTypeNames[queryIndex].value" ng-change="unsaved()">
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-danger" ng-click="removeBlankTypeName()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+					</div>
+				</div>
+
+				<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankTypeName()">Add a type name</button>
+
 				<hr>
 
 				<div ng-repeat="(i, attr) in query.attr track by $index" class="form-group">
@@ -44,6 +75,8 @@
 				</div>
 
 				<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
+
+				<hr>
 
 				<button type="button" class="btn btn-lg btn-block btn-danger" ng-click="removeQuery()">Remove query</button>
 
