--- a/src/main/webapp/template/server.html
+++ b/src/main/webapp/template/server.html
@@ -14,7 +14,7 @@
 			
 			<div class="form-horizontal">
 				
-				<div class="form-group">
+				<div class="form-group" ng-class="{'has-error': showErrorMessage(index, 'host')}">
 					<label class="col-sm-2 control-label">Host</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" ng-model="server.server.host" ng-change="unsaved(); loadJMXTree();">
@@ -22,7 +22,7 @@
 					</div>
 				</div>
 				
-				<div class="form-group">
+				<div class="form-group" ng-class="{'has-error': showErrorMessage(index, 'port')}">
 					<label class="col-sm-2 control-label">Port</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" ng-model="server.server.port" ng-change="unsaved(); loadJMXTree();">
