Some CSS changes

--- a/src/main/webapp/template/query.html
+++ b/src/main/webapp/template/query.html
@@ -37,7 +37,7 @@
 						<input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="unsaved()">
 					</div>
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-danger" ng-click="removeTypeNames($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+						<button type="button" class="btn btn-danger" ng-click="removeTypeName($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
 					</div>
 				</div>
 
