--- a/src/main/webapp/template/query.html
+++ b/src/main/webapp/template/query.html
@@ -1,92 +1,80 @@
-<div class="panel" ng-class="{'panel-info': server.saved, 'panel-warning': !server.saved}">
+<span>
 					
-	<div class="panel-heading" role="tab" id="query_heading_{{ serverIndex }}{{ queryIndex }}">
-		<h3 class="panel-title">
-			<a data-toggle="collapse" data-parent="#query_accordion{{ serverIndex }}" href="#query_collapse_{{ serverIndex }}{{ queryIndex }}" aria-expanded="false" aria-controls="query_collapse_{{ serverIndex }}{{ queryIndex }}">
-				Query {{ queryIndex + 1 }} <span ng-show="query.obj">- {{ query.obj }}</span>
-			</a>
-		</h3>
-	</div>
+	<accordion-heading>
+		Query {{ queryIndex + 1 }} <span ng-show="query.obj">- {{ query.obj }}</span>
+	</accordion-heading>
 
-	<div id="query_collapse_{{ serverIndex }}{{ queryIndex }}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="query_heading_{{ serverIndex }}{{ queryIndex }}">
-
-		<div class="panel-body">
-			
-			<div class="form-horizontal">
-				
-				<div class="form-group" ng-class="{'has-error': showErrorMessage(serverIndex, queryIndex, 'obj')}">
-					<label class="col-sm-2 control-label">Object</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" ng-model="query.obj" ng-change="unsaved(); suggestName();" typeahead="name for name in nameSuggestions | filter:$viewValue | limitTo:10">
-						<p class="text-danger" ng-show="showErrorMessage(serverIndex, queryIndex, 'obj')">The submitted value is incorrect.</p>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label class="col-sm-2 control-label">Result alias</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" ng-model="query.resultAlias" ng-change="unsaved()">
-					</div>
-				</div>
-
-				<hr>
-
-				<div ng-repeat="(i, typeName) in query.typeNames track by $index" class="form-group">
-					<label class="col-sm-2 control-label">Type name {{ $index + 1 }}</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="unsaved()">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" class="btn btn-danger" ng-click="removeTypeName($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-					</div>
-				</div>
-
-				<div ng-show="server.blankTypeNames[queryIndex]" class="form-group">
-					<label class="col-sm-2 control-label">Type name {{ query.typeNames.length + 1 }}</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" ng-model="server.blankTypeNames[queryIndex].value" ng-change="unsaved()">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" class="btn btn-danger" ng-click="removeBlankTypeName()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-					</div>
-				</div>
-
-				<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankTypeName()">Add a type name</button>
-
-				<hr>
-
-				<div ng-repeat="(i, attr) in query.attr track by $index" class="form-group">
-					<label class="col-sm-2 control-label">Attribute {{ $index + 1 }}</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" ng-model="query.attr[i]" ng-change="unsaved(); suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" class="btn btn-danger" ng-click="removeAttr($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-					</div>
-				</div>
-
-				<div ng-show="server.blankAttr[queryIndex]" class="form-group">
-					<label class="col-sm-2 control-label">Attribute {{ query.attr.length + 1 }}</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" ng-model="server.blankAttr[queryIndex].value" ng-change="unsaved(); suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" class="btn btn-danger" ng-click="removeBlankAttr()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-					</div>
-				</div>
-
-				<p class="text-danger" ng-show="showErrorMessage(serverIndex, queryIndex, 'attr')">At least one attribute must be supplied.</p>
-
-				<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
-
-				<hr>
-
-				<button type="button" class="btn btn-lg btn-block btn-danger" ng-click="removeQuery()">Remove query</button>
-
+	<div class="form-horizontal">
+		
+		<div class="form-group" ng-class="{'has-error': server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')}">
+			<label class="col-sm-2 control-label">Object</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="query.obj" ng-change="server.saved = false; suggestName();" typeahead="name for name in nameSuggestions | filter:$viewValue | limitTo:10">
+				<p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')">The submitted value is incorrect.</p>
 			</div>
-
 		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 control-label">Result alias</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="query.resultAlias" ng-change="server.saved = false">
+			</div>
+		</div>
+
+		<hr>
+
+		<div ng-repeat="(i, typeName) in query.typeNames track by $index" class="form-group">
+			<label class="col-sm-2 control-label">Type name {{ $index + 1 }}</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="server.saved = false">
+			</div>
+			<div class="col-sm-2">
+				<button type="button" class="btn btn-danger" ng-click="removeTypeName($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+			</div>
+		</div>
+
+		<div ng-show="server.blankTypeNames[queryIndex]" class="form-group">
+			<label class="col-sm-2 control-label">Type name {{ query.typeNames.length + 1 }}</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" ng-model="server.blankTypeNames[queryIndex].value" ng-change="server.saved = false">
+			</div>
+			<div class="col-sm-2">
+				<button type="button" class="btn btn-danger" ng-click="removeBlankTypeName()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+			</div>
+		</div>
+
+		<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankTypeName()">Add a type name</button>
+
+		<hr>
+
+		<div ng-repeat="(i, attr) in query.attr track by $index" class="form-group">
+			<label class="col-sm-2 control-label">Attribute {{ $index + 1 }}</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" ng-model="query.attr[i]" ng-change="server.saved = false; suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
+			</div>
+			<div class="col-sm-2">
+				<button type="button" class="btn btn-danger" ng-click="removeAttr($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+			</div>
+		</div>
+
+		<div ng-show="server.blankAttr[queryIndex]" class="form-group">
+			<label class="col-sm-2 control-label">Attribute {{ query.attr.length + 1 }}</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" ng-model="server.blankAttr[queryIndex].value" ng-change="server.saved = false; suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
+			</div>
+			<div class="col-sm-2">
+				<button type="button" class="btn btn-danger" ng-click="removeBlankAttr()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
+			</div>
+		</div>
+
+		<p class="text-danger" ng-show="showErrorMessage(queryIndex, 'attr')">At least one attribute must be supplied.</p>
+
+		<button type="button" class="btn btn-lg btn-block btn-default" ng-click="server.addBlankAttr()">Add an attribute</button>
+
+		<hr>
+
+		<button type="button" class="btn btn-lg btn-block btn-danger" ng-click="server.removeQuery()">Remove query</button>
 
 	</div>
 	
-</div>
+</span>
