--- a/jmxtrans-gui/src/main/site/app/components/query/query.html
+++ b/jmxtrans-gui/src/main/site/app/components/query/query.html
@@ -1,11 +1,11 @@
 <span>
-					
+
 	<accordion-heading>
 		Query {{ queryIndex + 1 }} <span ng-show="query.obj">- {{ query.obj }}</span>
 	</accordion-heading>
 
 	<div class="form-horizontal">
-		
+
 		<div class="form-group" ng-class="{'has-error': server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')}">
 			<label class="col-sm-2 control-label">Object</label>
 			<div class="col-sm-10">
@@ -69,12 +69,12 @@
 
 		<p class="text-danger" ng-show="showErrorMessage(queryIndex, 'attr')">At least one attribute must be supplied.</p>
 
-		<button type="button" class="btn btn-lg btn-block btn-default" ng-click="server.addBlankAttr()">Add an attribute</button>
+		<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
 
 		<hr>
 
 		<button type="button" class="btn btn-lg btn-block btn-danger" ng-click="server.removeQuery()">Remove query</button>
 
 	</div>
-	
+
 </span>
