--- a/jmxtrans-gui/src/main/site/app/vendor.scss
+++ b/jmxtrans-gui/src/main/site/app/vendor.scss
@@ -1,9 +1,8 @@
-@import "../../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets.scss";
-@import "../../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss";
-@import "_variables.scss";
-@import "_bootswatch.scss";
+$icon-font-path: "../../../../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 
-$icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+@import '../../../../bower_components/bootswatch-scss/flatly/variables';
+@import '../../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap';
+@import '../../../../bower_components/bootswatch-scss/yeti/bootswatch';
 
 /* Do not remove this comments bellow. It's the markers used by wiredep to inject
    sass dependencies when defined in the bower.json of your dependencies */
