--- a/jmxtrans-gui/src/main/site/app/components/query/query.html
+++ b/jmxtrans-gui/src/main/site/app/components/query/query.html
@@ -1,65 +1,68 @@
 <span>
 
 	<accordion-heading>
-		Query {{ queryIndex + 1 }} <span ng-show="query.obj">- {{ query.obj }}</span>
-	</accordion-heading>
+    Query {{ queryIndex + 1 }} <span ng-show="query.obj">- {{ query.obj }}</span>
+  </accordion-heading>
 
-	<div class="form-horizontal">
+	<div class="row query-info">
 
-		<div class="form-group" ng-class="{'has-error': server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')}">
-			<label class="col-sm-2 control-label">Object</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" ng-model="query.obj" ng-change="server.saved = false; suggestName(); nbTypeNames();" typeahead="name for name in nameSuggestions | filter:$viewValue | limitTo:10">
-				<p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')">The submitted value is incorrect.</p>
-			</div>
-		</div>
+    <div class="form-group col-sm-8"
+         ng-class="{'has-error': server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')}">
+      <label class="control-label">Object</label>
+      <input type="text" class="form-control" ng-model="query.obj"
+             ng-change="server.saved = false; suggestName(); nbTypeNames();"
+             typeahead="name for name in nameSuggestions | filter:$viewValue | limitTo:10">
+      <p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')">The
+        submitted value is incorrect.</p>
+    </div>
 
-		<div class="form-group">
-			<label class="col-sm-2 control-label">Result alias</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" ng-model="query.resultAlias" ng-change="server.saved = false">
-			</div>
-		</div>
+    <div class="form-group col-sm-4">
+      <label class="control-label">Result alias</label>
+      <input type="text" class="form-control" ng-model="query.resultAlias" ng-change="server.saved = false">
+    </div>
 
-		<hr ng-hide="!query.typeNames || query.typeNames.length == 0">
+    <hr ng-hide="!query.typeNames || query.typeNames.length == 0" class="col-sm-12">
 
-		<div ng-repeat="(i, typeName) in query.typeNames track by $index" class="form-group">
-			<label class="col-sm-2 control-label">Type name {{ $index + 1 }}</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="server.saved = false">
-			</div>
-		</div>
+    <div ng-repeat="(i, typeName) in query.typeNames track by $index" class="form-group col-sm-4">
+      <label class="control-label">Type name {{ $index + 1 }}</label>
+      <input type="text" class="form-control" ng-model="query.typeNames[i]" ng-change="server.saved = false">
+    </div>
 
-		<hr>
+    <hr class="col-sm-12">
 
-		<div ng-repeat="(i, attr) in query.attr track by $index" class="form-group">
-			<label class="col-sm-2 control-label">Attribute {{ $index + 1 }}</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" ng-model="query.attr[i]" ng-change="server.saved = false; suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-			</div>
-			<div class="col-sm-2">
-				<button type="button" class="btn btn-danger" ng-click="removeAttr($index)"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-			</div>
-		</div>
+    <div ng-repeat="(i, attr) in query.attr track by $index" class="form-group col-sm-4">
+      <label class="control-label">Attribute {{ $index + 1 }}</label>
+      <div class="form-inline">
+        <input type="text" class="form-control" ng-model="query.attr[i]"
+               ng-change="server.saved = false; suggestAttr();"
+               typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
+        <button type="button" class="btn btn-danger" ng-click="removeAttr($index)">
+          <span class="fa fa-remove"></span> Remove
+        </button>
+      </div>
+    </div>
 
-		<div ng-show="server.blankAttr[queryIndex]" class="form-group">
-			<label class="col-sm-2 control-label">Attribute {{ query.attr.length + 1 }}</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" ng-model="server.blankAttr[queryIndex].value" ng-change="server.saved = false; suggestAttr();" typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-			</div>
-			<div class="col-sm-2">
-				<button type="button" class="btn btn-danger" ng-click="removeBlankAttr()"><span class="glyphicon glyphicon-remove"></span> Remove</button>
-			</div>
-		</div>
+    <div ng-show="server.blankAttr[queryIndex]" class="form-group col-sm-4">
+      <label class="control-label">Attribute {{ query.attr.length + 1 }}</label>
 
-		<p class="text-danger" ng-show="showErrorMessage(queryIndex, 'attr')">At least one attribute must be supplied.</p>
+      <div class="form-inline">
+        <input type="text" class="form-control" ng-model="server.blankAttr[queryIndex].value"
+               ng-change="server.saved = false; suggestAttr();"
+               typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
+        <button type="button" class="btn btn-danger" ng-click="removeBlankAttr()"><span
+          class="fa fa-remove"></span> Remove
+        </button>
+      </div>
+    </div>
 
-		<button type="button" class="btn btn-lg btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
+    <p class="text-danger" ng-show="showErrorMessage(queryIndex, 'attr')">At least one attribute must be supplied.</p>
 
-		<hr>
+    <button type="button" class="btn btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
 
-		<button type="button" class="btn btn-lg btn-block btn-danger" ng-click="server.removeQuery()">Remove query</button>
+    <hr>
 
-	</div>
+    <button type="button" class="btn btn-block btn-danger" ng-click="server.removeQuery()">Remove query</button>
+
+  </div>
 
 </span>
