--- a/jmxtrans-gui/src/main/site/app/index.scss
+++ b/jmxtrans-gui/src/main/site/app/index.scss
@@ -3,3 +3,13 @@ button.btn-link {
 	padding-left: 5px !important;
 }
 
+.server-basic-info {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+.query-info {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
