--- a/jmxtrans-gui/src/main/site/app/components/query/query.html
+++ b/jmxtrans-gui/src/main/site/app/components/query/query.html
@@ -55,13 +55,13 @@
       </div>
     </div>
 
-    <p class="text-danger" ng-show="showErrorMessage(queryIndex, 'attr')">At least one attribute must be supplied.</p>
+    <p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].attr')">At least one attribute must be supplied.</p>
 
-    <button type="button" class="btn btn-block btn-default" ng-click="addBlankAttr()">Add an attribute</button>
+    <hr class="col-md-12"/>
 
-    <hr>
+    <button type="button" class="btn btn-default col-md-6" ng-click="addBlankAttr()">Add an attribute</button>
 
-    <button type="button" class="btn btn-block btn-danger" ng-click="server.removeQuery()">Remove query</button>
+    <button type="button" class="btn btn-danger col-md-6" ng-click="server.removeQuery()">Remove query</button>
 
   </div>
 
