--- a/jmxtrans-gui/src/main/site/app/index.scss
+++ b/jmxtrans-gui/src/main/site/app/index.scss
@@ -1,3 +1,7 @@
+@import '../../../../bower_components/bootswatch-scss/flatly/variables';
+@import '../../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap';
+@import '../../../../bower_components/bootswatch-scss/flatly/bootswatch';
+
 button.btn-link {
 	padding-right: 5px !important;
 	padding-left: 5px !important;
