--- a/jmxtrans-gui/src/app/components/query/query.html
+++ b/jmxtrans-gui/src/app/components/query/query.html
@@ -12,6 +12,7 @@
       <input type="text" class="form-control" ng-model="query.obj"
              ng-change="server.saved = false; suggestName(); nbTypeNames();"
              typeahead="name for name in nameSuggestions | filter:$viewValue | limitTo:10">
+
       <p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].obj')">The
         submitted value is incorrect.</p>
     </div>
@@ -32,12 +33,14 @@
 
     <div ng-repeat="(i, attr) in query.attr track by $index" class="form-group col-sm-4">
       <label class="control-label">Attribute {{ $index + 1 }}</label>
+
       <div class="form-inline">
         <input type="text" class="form-control" ng-model="query.attr[i]"
                ng-change="server.saved = false; suggestAttr();"
                typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-        <button type="button" class="btn btn-danger" ng-click="removeAttr($index)">
-          <span class="fa fa-remove"></span> Remove
+        <button type="button" class="btn btn-danger" ng-click="removeAttr($index)" popover-placement="right"
+                popover="Remove" popover-trigger="mouseenter">
+          <span class="fa fa-remove"></span>
         </button>
       </div>
     </div>
@@ -49,19 +52,25 @@
         <input type="text" class="form-control" ng-model="server.blankAttr[queryIndex].value"
                ng-change="server.saved = false; suggestAttr();"
                typeahead="attr for attr in attrSuggestions | filter:$viewValue | limitTo:10">
-        <button type="button" class="btn btn-danger" ng-click="removeBlankAttr()"><span
-          class="fa fa-remove"></span> Remove
+        <button type="button" class="btn btn-danger" ng-click="removeBlankAttr()" popover-placement="right"
+                popover="Remove" popover-trigger="mouseenter"><span
+          class="fa fa-remove"></span>
         </button>
       </div>
     </div>
 
-    <p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].attr')">At least one attribute must be supplied.</p>
+    <p class="text-danger" ng-show="server.showErrorMessage('servers[0].queries[' + queryIndex + '].attr')">At least one
+      attribute must be supplied.</p>
 
-    <hr class="col-md-12"/>
+    <hr class="col-sm-12"/>
 
-    <button type="button" class="btn btn-default col-md-6" ng-click="addBlankAttr()">Add an attribute</button>
+    <span class="col-sm-12 text-right">
+      <button class="btn btn-default" ng-click="addBlankAttr()" style="display: inline-block;">Add an attribute</button>
 
-    <button type="button" class="btn btn-danger col-md-6" ng-click="server.removeQuery()">Remove query</button>
+      <button class="btn btn-danger" ng-click="server.removeQuery(queryIndex)" style="display: inline-block;">Remove
+        query
+      </button>
+    </span>
 
   </div>
 
