--- a/jmxtrans-gui/src/app/components/server/server.html
+++ b/jmxtrans-gui/src/app/components/server/server.html
@@ -15,7 +15,7 @@
         <div class="form-group col-sm-6" ng-class="{'has-error': server.showErrorMessage('servers[0].host'), 'has-success': server.validJMXHost}">
           <label class="control-label">Host</label>
           <input type="text" class="form-control" ng-model="server.server.host"
-                 ng-change="server.saved = false; server.loadJMXTree();">
+                 ng-change="server.saved = false" ng-blur="server.loadJMXTree()">
 
           <p class="text-danger" ng-show="server.showErrorMessage('servers[0].host')">The submitted value is
             incorrect.</p>
@@ -24,7 +24,7 @@
         <div class="form-group col-sm-6" ng-class="{'has-error': server.showErrorMessage('servers[0].port'), 'has-success': server.validJMXHost}">
           <label class="control-label">Port</label>
           <input type="text" class="form-control" ng-model="server.server.port"
-                 ng-change="server.saved = false; server.loadJMXTree();">
+                 ng-change="server.saved = false" ng-blur="server.loadJMXTree()">
 
           <p class="text-danger" ng-show="server.showErrorMessage('servers[0].port')">The submitted value is
             incorrect.</p>
@@ -32,13 +32,13 @@
 
         <div class="form-group col-sm-6">
           <label class="control-label">Username</label>
-          <input type="text" class="form-control" ng-model="server.server.username" ng-change="server.saved = false; server.loadJMXTree();">
+          <input type="text" class="form-control" ng-model="server.server.username" ng-change="server.saved = false" ng-blur="server.loadJMXTree()">
         </div>
 
         <div class="form-group col-sm-6">
           <label class="control-label">Password</label>
           <input type="password" class="form-control" ng-model="server.server.password"
-                 ng-change="server.saved = false; server.loadJMXTree();">
+                 ng-change="server.saved = false" ng-blur="server.loadJMXTree()">
         </div>
 
       </div>
