--- a/frontend/src/app/components/server/server.html
+++ b/frontend/src/app/components/server/server.html
@@ -12,15 +12,14 @@
 
         <div class="form-group col-sm-6" ng-class="{'has-error': server.showErrorMessage('servers[0].host'), 'has-success': valid}">
           <label class="control-label">Host</label>
-          <input type="text" class="form-control" ng-model="server.server.host" ng-blur="loadObjectnames()">
+          <input id="host" type="text" class="form-control" ng-model="server.server.host" ng-blur="loadObjectnames()">
 
-          <p class="text-danger" ng-show="server.showErrorMessage('servers[0].host')">The submitted value is
-            incorrect.</p>
+          <p class="text-danger" ng-show="server.showErrorMessage('servers[0].host')">The submitted value is incorrect.</p>
         </div>
 
         <div class="form-group col-sm-6" ng-class="{'has-error': server.showErrorMessage('servers[0].port'), 'has-success': valid}">
           <label class="control-label">Port</label>
-          <input type="text" class="form-control" ng-model="server.server.port" ng-blur="loadObjectnames()">
+          <input id="port" type="text" class="form-control" ng-model="server.server.port" ng-blur="loadObjectnames()">
 
           <p class="text-danger" ng-show="server.showErrorMessage('servers[0].port')">The submitted value is
             incorrect.</p>
